trying to fix cut off text in projects on mobile

--- a/styles/sass/partials/_projects.scss
+++ b/styles/sass/partials/_projects.scss
@@ -21,7 +21,11 @@
         margin: 20px 0 5px 0;
     }
     .projectContainer {
+        h5 {
+            width: 100%;
+        }
         p {
+            width: 100%;
             margin: 0;
             padding-top: 2px;
         }
