--- a/styles/style.css
+++ b/styles/style.css
@@ -723,7 +723,11 @@ footer .redBar2 {
 .projects h3 {
   margin: 20px 0 5px 0;
 }
+.projects .projectContainer h5 {
+  width: 100%;
+}
 .projects .projectContainer p {
+  width: 100%;
   margin: 0;
   padding-top: 2px;
 }
